--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     @apply w-16 h-16 bg-black bg-opacity-20 text-gray-200 text-xl inline-flex items-center justify-center rounded-md  hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300;
   }
   .resumeLi {
-    @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px]  rounded-none;
+    @apply w-full h-20 bg-black bg-opacity-25 text-[14px] sm:text-lg text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px]  rounded-none;
   }
   .bgOpacity {
     @apply bg-white bg-opacity-40;
